2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: cleaned source code style, and fixed the
	show graphs in "top_n" report item, now it is static graph and show a as
	text of bars (or pie pieces) the agent name and module for more clear and
	when you have same agents with distints modules, now the graph don't group
	by agent.
	
	Fixes: #3483852

2012-02-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/fgraph.php
	include/functions_reporting.php
	include/functions_visual_map.php: Fixed little
	graphs into the visual maps of the widgets 
	(min height control added)

2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_monitores.php, operation/agentes/ver_agente.php:
	cleaned source code style.
	
	* include/functions_agents.php: refixed the query to extract modules for the
	ACL policies.

2012-02-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Module event graph resized.

2012-02-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/netflow/nf_live_view.php: Added red color in name and
	group in netflow live filter creation.

2012-02-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/visual_console_builder.ajax.php: Removed max, min
	options when a module graph is created in visual console editor.

2012-02-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php	
	 include/javascript/pandora.js
	 operation/agentes/stat_win.php: Added new graph for module events
	 in the module popup graph window.

2012-02-13  Koichiro Kikuchi  <koichiro@rworks.jp>

	* include/javascript/pandora_alerts.js: Removed double quotes which encolse
	  substituted field[1-3] from command preview.  pandora_server doesn't add
	  double quotes to enclose these fields.

2012-02-13  Vanessa Gil  <vanessa.gil@artica.es>
	* operation/events/events_validate: Display options: validate and