@@ -1,3 +1,8 @@
+2012-02-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* operation/events/events_list.php: Changed arrow when event filter
+	toggle is pushed.
+
 2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_reporting.php: cleaned source code style, and fixed the
